feat: (Prediction): Get Client Orders Ok

--- a/SalesDatePrediction/API/appsettings.json
+++ b/SalesDatePrediction/API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "ConnectionStrings": {
+    "StoreSample": "Server=localhost\\SQLEXPRESS01;Database=StoreSample;Trusted_Connection=True;TrustServerCertificate=True"
+  }
+
+
 }
