--- a/SalesDatePrediction/Application/SalesDatePrediction.Application.csproj
+++ b/SalesDatePrediction/Application/SalesDatePrediction.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\SalesDatePrediction.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
